test/bad/generics/print04.px

func f<A,B>(A x, A->B f) B def
    return f(x)

print f(write, _)
